# Spacy

./: Cargo.toml  README.md
crates/client/: Cargo.toml
crates/client/src/: lib.rs  server_connection.rs
crates/client/src/camera/: mod.rs  systems.rs
crates/client/src/input/: mod.rs  systems.rs
crates/client/src/light/: mod.rs  systems.rs
crates/client/src/planet/: components.rs  mod.rs
crates/client/src/player/: components.rs  mod.rs  systems.rs
crates/client/src/sync/: components.rs  mod.rs  systems.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs  logging.rs  message.rs  udp_message.rs  user.rs
crates/common/src/message/: mod.rs  planet.rs  player.rs
crates/common/src/physics/: collision_groups.rs  controlled_player.rs  gravity.rs  levitation.rs  mod.rs
crates/common/src/planet/: components.rs  mod.rs
crates/common/src/player/: actions.rs  components.rs  message.rs  mod.rs  player_controller.rs
crates/common/src/sync/: mod.rs
crates/network/: Cargo.toml
crates/network/src/: client.rs  lib.rs  server.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs  user_connections.rs
crates/server/src/physics/: levitation.rs  mod.rs
crates/server/src/planet/: components.rs  mod.rs  systems.rs
crates/server/src/player/: components.rs  mod.rs  systems.rs
crates/server/src/sync/: components.rs  mod.rs  systems.rs  traits.rs
executables/client/: Cargo.toml
executables/client-full/: Cargo.toml
executables/client-full/src/: main.rs
executables/client/src/: main.rs  tcp_client.rs  udp_client.rs
executables/server/: Cargo.toml
executables/server/src/: main.rs  tcp_server.rs  udp_server.rs
src/: main.rs
src/client/: mod.rs
src/common/: mod.rs
src/server/: app.rs  mod.rs
