[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.8.1", default-features = false, features = ["bevy_pbr", "bevy_render", "bevy_asset", "bevy_core_pipeline", "bevy_ui", "bevy_text", "bevy_sprite", "bevy_winit", "png"]  }
common = { path = "../common" }
tokio = { version = "1.21.0", features = ["full"] }
