[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.8.1", default-features = false, features = []  }
bevy_rapier3d = "0.16.2"
bincode = "2.0.0-rc.1"
chrono = "0.4.22"
