[package]
name = "client-full"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../../crates/common" }
client = { path = "../../crates/client" }
server = { path = "../../crates/server" }
network = { path = "../../crates/network" }
tokio = { version = "1.21.0", features = ["full"] }
log = "0.4.17"
