[package]
name = "spacy-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
client = { path = "../../crates/client" }
common = { path = "../../crates/common" }
network = { path = "../../crates/network" }
tokio = { version = "1.21.0", features = ["full"] }
lru = "0.7.8"
