[package]
name = "spacy-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
server = { path = "../../crates/server" }
common = { path = "../../crates/common" }
network = { path = "../../crates/network" }
tokio = { version = "1.21.0", features = ["full"] }
rand = "0.8.5"
lru = "0.7.8"
log = "0.4.17"
